--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,7 +1,7 @@
 .loader-wrapper{
     width: 100%;
     height: 2400px;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: #f6f6f6;
@@ -56,6 +56,7 @@
 .loader{
     margin-top: -1500px;
     display: flex;
+    position: fixed;
     justify-content: center;
     align-items: center;
     width: 50px;
@@ -66,6 +67,7 @@
     animation: loader 3s 0.2s infinite ease-out;
     & i {
         display: flex;
+        position: fixed;
         color: $colour-secondary;
         justify-content: center;
         align-items: center;
